# wingman

./: .dockerignore  .env.example  .gitignore  BUGS_FOUND.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.json  docker-compose.yml  pyproject.toml  reproduce_issue.py  requirements.txt  run_overnight.py  run_swarm.py  test_documents.py
docs/: OPENCLAW_PICOCLAW_RESEARCH.md  bugs-found.md  implementation-summary.md  research_notes.md
examples/: README.md  coding_assistant.py  memory_search.py  research_agent.py
src/: __init__.py  main.py  test_food.py  test_snake.py
src/agent/: __init__.py  loop.py  prompt.py
src/agents/: __init__.py  base.py  browser.py  data.py  research.py  router.py  system.py  writer.py
src/agents/coding/: __init__.py  engineer.py  orchestrator.py  planner.py  reviewer.py  state.py
src/apps/snake_game/: __init__.py  constants.py  food.py  main.py  snake.py
src/channels/: __init__.py  base.py  discord.py  slack.py  telegram.py  webchat.py  whatsapp.py
src/cli/: __init__.py  app.py  commands.py  onboard.py
src/config/: __init__.py  paths.py  settings.py
src/core/: __init__.py  health.py  heartbeat.py  logging.py  protocol.py  rate_limiter.py  runtime.py  session.py
src/extraction/: __init__.py  client.py  config.py  extractor.py
src/gateway/: __init__.py  router.py  server.py  session.py
src/ingestion/: __init__.py  chunker.py  loader.py  processor.py
src/memory/: __init__.py  manager.py  search.py  transcript.py
src/memory/templates/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
src/plugins/: __init__.py  loader.py
src/providers/: _http.py  _openai_compat.py  base.py  gemini.py  groq.py  kimi.py  manager.py  ollama.py  openai.py  openrouter.py
src/retrieval/: __init__.py  embeddings.py  vector_store.py
src/schemas/: document.py  query.py  response.py
src/security/: __init__.py  audit.py
src/skills/: __init__.py  hub.py  manager.py
src/swarm/: __init__.py  bots.py  live_room.py  manager.py  night_lab.py  personalities.py  sync.py
src/testing/: __init__.py  agent_test.py
src/tools/: browser_use.py  cron.py  desktop.py  documents.py  extraction.py  filesystem.py  git_ops.py  http_client.py  macos.py  media.py  python_exec.py  registry.py  sessions.py  shell.py  sqlite_ops.py  system_pkg.py  web_search.py
src/voice/: __init__.py  stt.py  tts.py  wake_word.py
tests/: __init__.py  test_core.py
tests/integration/: test_documents.py  test_langextract.py
